upgrade io-functions-commons + related refactor
